plugins {
    id 'java'
    id 'maven-publish'
    id 'org.jetbrains.kotlin.jvm'
}

group 'space.dynomake'
version '1.0.6'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        name = "clojars.org"
        url = uri("https://repo.clojars.org")
    }
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.18.2'

    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

}

publishing {
    repositories {
        maven {
            name = "dynoMaven"
            url = uri("https://maven.dynomake.space/releases")
            credentials {
                username = findProperty("dynoMavenUser") ?: System.getenv("CI_JOB_USER")
                password = findProperty("dynoMavenPassword") ?: System.getenv("CI_JOB_TOKEN")
            }
        }

    }
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}
compileKotlin {
}